--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,7 +25,7 @@ body {
   padding: 40px 0;
 
   &__title {
-    font-weight: 800px;
+    font-weight: 800;
     font-size: 38px;
     margin-top: 60px;
     margin-bottom: 50px;
